--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -8,6 +8,8 @@ An Architrino is a transceiver: it continuously emits potential wavefronts and a
 -   **Field Speed:** The radius of this sphere grows at a constant rate, the field speed $v$.
 -   **Surface Density:** The magnitude of the potential is concentrated on the surface of the sphere and decreases as a function of $1/r^2$, where $r$ is the sphere's radius.
 
+We work in units with field speed $v=1$.
+
 ---
 
 ### Geometric characterization
@@ -80,7 +82,7 @@ While an Architrino is a constant rate emitter of potential per unit time, the s
 
 To model this without singularities, we define the effective charge magnitude, $q_{eff}$, using a dimensionless factor based on the ratio of the particle's speed to the field speed, $\beta(t_0) = |\mathbf{v}_a(t_0)|/v$. A simple, non-singular model is:
 $$
-q_{eff}(t_0) = \frac{q}{1 + \beta(t_0)} = \frac{q}{1 + |\mathbf{v}_a(t_0)|/v}
+q_{eff}(t_0) = \frac{q}{1 + \beta(t_0)} = \frac{q}{1 + |\mathbf{v}_a(t_0)|}
 $$
 This modifies the governing equations. The source term in the conservation law becomes:
 $$
