--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -28,11 +28,11 @@ with durations measured separately as $\Delta t = t_2 - t_1$. We do not define a
 ### **Sphere Stream**
 As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
 
-Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = v(t_{obs} - t_0)$.
+Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = (t_{obs} - t_0)$.
 
 The sphere stream, denoted $\mathcal{SS}_a(t_{obs})$, is the union of all these spheres:
 $$
-\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = v(t_{obs} - t_0) \}
+\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = (t_{obs} - t_0) \}
 $$
 This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Under mild conditions on the historical worldline (e.g., unbounded excursion over time), the union of expanding wavefronts can densely cover space within bounded regions; in general, the coverage depends on the geometry of $\mathbf{s}_a(t)$.
 
@@ -41,7 +41,7 @@ In plain language: imagine the Architrino dropping tiny “pings” at every mom
 ### **Causal Intersection Times**
 For a receiver $a$ at time $t$ and a source particle $j$, define the causal set of emission times
 $$
-\mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\big\}.
+\mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
 $$
 When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|\ge v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
 
