--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -1,6 +1,6 @@
 # Kinetic and Potential Energy
 
-In this model, all energy is fundamentally tied to the Architrinos and the potential fields they generate. Architrinos are the sole carriers of kinetic energy through their motion and the source of potential energy through their interactions. All such dynamics unfold on a flat, non-dynamical background; forces and motion arise from fields and assemblies rather than any curvature of the background itself.
+In this model, all energy is fundamentally tied to the Architrinos and the potential fields they generate. Architrinos are the sole carriers of kinetic energy through their motion and the source of potential energy through their interactions. All such dynamics unfold on a flat, non-dynamical background; forces and motion arise from fields and assemblies rather than any curvature of the background itself. We work in units with field speed $v=1$.
 
 ### Kinetic Energy and Momentum
 
@@ -34,7 +34,7 @@ The model adheres to the principle of energy conservation through a continuous e
 
 2.  **Velocity-Modulated Emission:** The energy radiated into the field by an Architrino is modulated by its speed. The effective charge of an emission, $q_{eff}$, decreases as the particle's speed increases:
     $$
-    q_{eff}(t_0) = \frac{q}{1 + |\mathbf{v}_a(t_0)|/v}
+    q_{eff}(t_0) = \frac{q}{1 + |\mathbf{v}_a(t_0)|}
     $$
     This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the energy it radiates via its potential field decreases. This self-regulating mechanism is crucial for maintaining the overall energy balance of the system.
 
