--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -25,25 +25,30 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     $$
     For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|\ge 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
 
--   **Acceleration from a Source:** For each $t' \in \mathcal{C}_o(t)$, define the unit radial
+-   **Master Equation of Motion (canonical):** For each $t' \in \mathcal{C}_o(t)$, define
     $$
-    \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|}.
+    \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|}, \quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|.
     $$
-    The signed contribution obeys the charge rule (like repels, unlike attracts) with the explicit minimal law:
+    The signed, purely radial contribution is
     $$
-    \mathbf{a}_{o'\leftarrow o}(t; t') = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o|}{1+|\mathbf{v}_o(t')|}\,\frac{|q_{o'}|}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|^2}\,\hat{\mathbf{r}},
+    \mathbf{a}_{o'\leftarrow o}(t; t') = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\frac{1}{\big(1+|\mathbf{v}_o(t')|\big)\big(1+|\mathbf{v}_{o'}(t)|\big)}\,\hat{\mathbf{r}}.
     $$
-    where $\sigma_{q_o q_{o'}}=+1$ for like charges and $-1$ for unlike charges; $\kappa>0$ is the universal coupling constant; we set $v=1$ by units so speeds are dimensionless. The total acceleration is the superposition over all sources and all causal times:
+    No magnetic/right-hand-rule terms appear; there are no cross products or velocity-direction couplings—only radial action along $\hat{\mathbf{r}}$. The total acceleration superposes over all sources and causal times:
     $$
     \mathbf{a}_{o'}(t) = \sum_{o}\ \sum_{t'\in \mathcal{C}_o(t)} \mathbf{a}_{o'\leftarrow o}(t; t').
     $$
+
+    Conventions and exclusions:
+    - Heaviside convention $H(0)=0$ (no instantaneous self-force).
+    - Exact center hits ($r=0$ with $t>t'$) yield no net directional acceleration (symmetry; measure-zero).
+    - Regularization uses the shell $\delta(r-\tau)\to\delta_\varepsilon(r-\tau)$ when continuous-time dynamics are needed.
 
     Two-body checks (stationary sources):
     - Like charges ($\sigma=+1$): repulsion along $\hat{\mathbf{r}}$.
     - Unlike charges ($\sigma=-1$): attraction along $\hat{\mathbf{r}}$.
     - Stationary source: symmetry implies purely radial action; no tangential component.
 
-    In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges, relative speeds, and a $1/r^2$ falloff, then add up all such pushes.
+    In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges, both objects’ speeds, and a $1/r^2$ falloff, then add up all such pushes.
 
 ### **Well-posedness and Regularization**
 The surface–delta shells yield impulsive forces at isolated hit times. One may treat the dynamics as a measure-driven ODE in $t$ (with velocity of bounded variation), or regularize by replacing the surface delta with a narrow shell of thickness $\varepsilon$,
