--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Positrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Positrino.md
@@ -12,7 +12,7 @@ A Positrino, located at position $\mathbf{s}_p(t)$, is a point particle that mov
 
 -   **Causal Interaction:** Use the Master Equation of Motion defined in 00.1.4 Action and Interaction. We work in units with field speed $v=1$. For the Positrino with $q_p=+\epsilon$, each causal contribution from a source $j$ is purely radial along $\hat{\mathbf{r}}_{jp}$, with like charges repelling and unlike charges attracting. The strength is modulated by both emitter and receiver speeds via the factor $1/\big((1+|\mathbf{v}_j|)(1+|\mathbf{v}_p|)\big)$. The net acceleration sums over all $t_0 \in \mathcal{C}_j(t)$ and over all sources $j$.
 
-    Plain language: you accelerate along the line back to the emission point; like charges push you away, unlike charges pull you in, and both sides’ speeds dim the push.
+    Plain language: you accelerate along the line back to the emission point; like charges push you away, unlike charges pull you in, and both sides’ speeds dim the push. This modulation does not change the emission cadence: Architrinos emit at a constant rate; only per-wavefront amplitude and receiver response are speed-modulated.
 
 This behavior is consistent with a force law where like charges repel and opposite charges attract.
 
