--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -65,7 +65,7 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres.
 
--   **Velocity Dependence:** The dynamics are velocity-dependent. The strength of an emitted potential sphere is modulated by the **emitter's** velocity, and the action on the **receiver** is also modulated by its velocity. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
+-   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed, and the receiver’s response is likewise modulated by its speed. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
 
 ### **Self-Interaction**
 
