--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -24,13 +24,13 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 ## 2) Velocity-modulated emission and reception: a built-in energy regulator
 
 - What we assume:
-  - Effective emission strength q_eff(t0)=q/(1+|v_source(t0)|).
-  - Reception is likewise dimmed by 1/(1+|v_receiver(t)|).
+  - Emission cadence is constant; the effective per-wavefront amplitude is q_eff(t0)=q/(1+|v_source(t0)|).
+  - Receiver response is likewise modulated by 1/(1+|v_receiver(t)|).
   - Canonical per-hit law:
     a_{o′←o} ∝ σ_{q_o q_{o′}} |q_o q_{o′}|/(r² (1+|v_o|)(1+|v_{o′}|)) r̂.
 
 - Why it matters:
-  - As objects speed up, they both emit and absorb less strongly. That negative feedback loop reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points.
+  - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is the per-wavefront amplitude (q_eff) and the receiver’s response factor. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points.
   - Energetics become tractable: with ε-mollification (δ→δ_ε), you can define Φ_ε and verify ΔE_k=−ΔU on resolved intervals while still taking ε→0 for sharp impulses.
 
 ---
