--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -75,7 +75,7 @@ The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a
 -   **Super-field Speed ($|\mathbf{v}_a| > v$):** The particle travels a distance greater than the wavefront's radius. It is located *outside* the sphere of its most recent emission, moving ahead of it.
 -   **Symmetry Point ($|\mathbf{v}_a| = v$):** The particle travels exactly on the edge of its own expanding wavefront. This represents a critical symmetry-breaking point in its dynamics.
 
-It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing it's own wake, and later curving or stopping such that it's past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $C_a(t)$ along worldlines (see Action and Interaction).
+It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing its own wake, and later curving or stopping such that its past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $C_a(t)$ along worldlines (see Action and Interaction).
 
 #### **Velocity-Modulated Emission**
 While an Architrino is a constant rate emitter of potential per unit time, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
