--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -27,7 +27,7 @@ In this system, a stable, circular orbit is impossible. Because the attractive f
 -   The tangential component of the delayed force sustains the orbital motion.
 -   The radial component continuously pulls the particles closer together.
 
-With perfectly symmetric initial conditions (e.g., starting at rest), the paths of the Electrino and Positrino are distinct but perfect mirror images of each other. As they spiral inward, their speeds continuously increase. Consequently, according to the velocity-modulated emission rule, the effective charge $q_{eff}$ of their emissions continuously decreases.
+With perfectly symmetric initial conditions (e.g., starting at rest), the paths of the Electrino and Positrino are distinct but perfect mirror images of each other. As they spiral inward, their speeds continuously increase. Consequently, according to the velocity-modulated emission rule, the effective charge $q_{eff}$ (per-wavefront amplitude) continuously decreases as speed rises. This does not alter the emission cadence: Architrinos emit at a constant rate; only the per-wavefront amplitude is modulated.
 
 ### 3. Evolution Through Velocity Regimes
 
