--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -21,7 +21,7 @@ Potential energy arises from the interaction of an Architrino with the potential
     $$
     U(\mathbf{s}) = q' \Phi_{\text{net}}(\mathbf{s})
     $$
--   This is analogous to classical electrostatics, but here $\Phi_{\text{net}}$ is a dynamic quantity determined by the complete history of all source particles. The force experienced by the particle is given by the negative gradient of this potential energy: $\mathbf{F} = -\nabla U$.
+-   This is analogous to classical electrostatics, but here $\Phi_{\text{net}}$ is a dynamic quantity determined by the complete history of all source particles. The force experienced by the particle is given by the negative gradient of this potential energy: $\mathbf{F} = -\nabla U$. When a mollified field $\Phi_{\varepsilon}$ is used (replacing surface deltas by narrow shells), this relation holds pointwise; in the $\varepsilon\to 0$ limit, it holds in the sense of integrals over resolved intervals. The Master Equation of Motion remains the primary statement of dynamics.
 
 ### Energy Conservation and Exchange
 
@@ -32,11 +32,11 @@ The model adheres to the principle of energy conservation through a continuous e
     \Delta E_k = W = \int \mathbf{F} \cdot d\mathbf{s} = -\Delta U
     $$
 
-2.  **Velocity-Modulated Emission:** The energy radiated into the field by an Architrino is modulated by its speed. The effective charge of an emission, $q_{eff}$, decreases as the particle's speed increases:
+2.  **Velocity-Modulated Emission:** Architrinos emit wavefronts at a constant cadence; what is modulated by speed is the per-wavefront amplitude. The effective charge of an emission, $q_{eff}$, decreases as the particle's speed increases:
     $$
     q_{eff}(t_0) = \frac{q}{1 + |\mathbf{v}_a(t_0)|}
     $$
-    This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the energy it radiates via its potential field decreases. This self-regulating mechanism is crucial for maintaining the overall energy balance of the system.
+    This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the per-wavefront amplitude and the receiver’s response are reduced by the speed modulation. This self-regulating mechanism helps maintain overall energy balance and prevents runaway behavior.
 
 ### Total Energy vs. Apparent Energy and Momentum
 
