--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -1,5 +1,7 @@
 # Kinetic and Potential Energy
 
+Note: This document follows the Mathematical Style Guide (Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/Mathematical Style Guide.md).
+
 In this model, all energy is fundamentally tied to the Architrinos and the potential fields they generate. Architrinos are the sole carriers of kinetic energy through their motion and the source of potential energy through their interactions. All such dynamics unfold on a flat, non-dynamical background; forces and motion arise from fields and assemblies rather than any curvature of the background itself. We work in units with field speed $v=1$.
 
 ### Kinetic Energy and Momentum
