--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -1,5 +1,7 @@
 # Orbiting Binary Assembly
 
+Note: This document follows the Mathematical Style Guide (Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/Mathematical Style Guide.md).
+
 An orbiting binary is the simplest emergent assembly, consisting of two Architrinos of opposite charge—an Electrino and a Positrino. With charges $-\epsilon$ and $+\epsilon$, the assembly is electrically neutral overall. This system demonstrates the fundamental principles of interaction, including the consequences of delayed potential and the role of the velocity symmetry point. 
 
 ### 1. System Definition and Equations of Motion
