--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -9,11 +9,11 @@ Geodesics and dynamics: In a flat, non-dynamical background, geodesics are strai
 ### **Units and constants**
 -   We choose units with field speed $v=1$ (select $L_0,T_0$ so $v=L_0/T_0=1$); all speeds are hence dimensionless.
 -   $\kappa>0$ is the universal coupling constant controlling interaction strength.
--   $\varepsilon>0$ is the default shell thickness for regularization.
+-   $\eta>0$ is the default shell thickness for regularization.
 
 Symbols:
--   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\varepsilon>0$ (shell thickness)
--   $q_0>0$ (unit charge magnitude); Electrino $q=-q_0$, Positrino $q=+q_0$
+-   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
+-   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
 -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t')\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t'))/r$
 
@@ -43,7 +43,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     Conventions and exclusions:
     - Heaviside convention $H(0)=0$ (no instantaneous self-force).
     - Exact center hits ($r=0$ with $t>t'$) yield no net directional acceleration (symmetry; measure-zero).
-    - Regularization uses the shell $\delta(r-\tau)\to\delta_\varepsilon(r-\tau)$ when continuous-time dynamics are needed.
+    - Regularization uses the shell $\delta(r-\tau)\to\delta_\eta(r-\tau)$ when continuous-time dynamics are needed.
 
     Two-body checks (stationary sources):
     - Like charges ($\sigma=+1$): repulsion along $\hat{\mathbf{r}}$.
@@ -55,9 +55,9 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
 ### **Well-posedness and Regularization**
 The surface–delta shells yield impulsive forces at isolated hit times. One may treat the dynamics as a measure-driven ODE in $t$ (with velocity of bounded variation), or regularize by replacing the surface delta with a narrow shell of thickness $\varepsilon$,
 $$
-\delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\varepsilon}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\varepsilon^2}\Big),
+\delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),
 $$
-while preserving total emission $q_{\text{eff}}$. This produces continuous-in-time forces and classical $C^1$ solutions for $\mathbf{s}(t)$ given $C^1$ initial data. In the super-field-speed regime ($|\mathbf{v}_a|>1$), multiple self-roots can occur; summing over all causal times with an integrable regularization ensures finite total impulse. In plain English: the ideal model gives instantaneous “kicks”; the $\varepsilon$-thickening turns them into brief, smooth pushes so standard ODE methods apply.
+while preserving total emission $q_{\text{eff}}$. This produces continuous-in-time forces and classical $C^1$ solutions for $\mathbf{s}(t)$ given $C^1$ initial data. In the super-field-speed regime ($|\mathbf{v}_a|>1$), multiple self-roots can occur; summing over all causal times with an integrable regularization ensures finite total impulse. In plain English: the ideal model gives instantaneous “kicks”; the $\eta$-thickening turns them into brief, smooth pushes so standard ODE methods apply.
 
 ### **Core Principles**
 
