--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -23,7 +23,7 @@ Potential energy arises from the interaction of an Architrino with the potential
     $$
     U(\mathbf{s}) = q' \Phi_{\text{net}}(\mathbf{s})
     $$
--   This is analogous to classical electrostatics, but here $\Phi_{\text{net}}$ is a dynamic quantity determined by the complete history of all source particles. The force experienced by the particle is given by the negative gradient of this potential energy: $\mathbf{F} = -\nabla U$. When a mollified field $\Phi_{\varepsilon}$ is used (replacing surface deltas by narrow shells), this relation holds pointwise; in the $\varepsilon\to 0$ limit, it holds in the sense of integrals over resolved intervals. The Master Equation of Motion remains the primary statement of dynamics.
+-   This is analogous to classical electrostatics, but here $\Phi_{\text{net}}$ is a dynamic quantity determined by the complete history of all source particles. The force experienced by the particle is given by the negative gradient of this potential energy: $\mathbf{F} = -\nabla U$. When a mollified field $\Phi_{\eta}$ is used (replacing surface deltas by narrow shells), this relation holds pointwise; in the $\eta\to 0$ limit, it holds in the sense of integrals over resolved intervals. The Master Equation of Motion remains the primary statement of dynamics.
 
 ### Energy Conservation and Exchange
 
