--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -33,7 +33,7 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 
 - Why it matters:
   - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is the per-wavefront amplitude (q_eff) and the receiver’s response factor. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points.
-  - Energetics become tractable: with ε-mollification (δ→δ_ε), you can define Φ_ε and verify ΔE_k=−ΔU on resolved intervals while still taking ε→0 for sharp impulses.
+  - Energetics become tractable: with η-mollification (δ→δ_η), you can define Φ_η and verify ΔE_k=−ΔU on resolved intervals while still taking η→0 for sharp impulses.
 
 ---
 
