--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -4,44 +4,57 @@ Note: This document follows the Mathematical Style Guide (Geometrical Model of N
 
 ---
 
-## 1) Photons: Propagating Neutral Vortex Bundles
+## 1) Photons: Neutral Planar Bundles on a Phase-Locked Corridor (“Photon Train”)
 
-Definition (geometric): A photon is a coherent, charge-neutral, propagating bundle of delayed, purely radial per-hit actions organized along an axis. It is not a fundamental particle but an emergent, self-guided packet formed by phase-locked coupling of axial structures produced by oscillatory sources (e.g., binaries within assemblies). In this view, “emission” and “absorption” are re-coupling events of this bundle to and from internal binaries, transferring energy and angular momentum without inventorying a separate gauge field.
+Definition (geometric): A photon is a coherent, charge-neutral, propagating bundle of delayed, purely radial per-hit actions organized along a narrow axial corridor. In practice it appears as a phase-locked stack of planar sub-bundles (“planar bosons on the photon train”) emitted by oscillatory sources (e.g., binaries inside assemblies). Emission/absorption are re-coupling events of this corridor to and from internal binaries; no separate gauge-field inventory is required.
 
-- Neutrality:
-  - Net charge is zero at all times; the packet’s far field is dominated by transverse, oscillatory components from retardation geometry.
-- Axial geometry:
-  - The packet is supported on a narrow, quasi-cylindrical corridor aligned with a propagation axis ê. Within this corridor, the superposed 1/r² shells from the driving source(s) maintain a phase structure that self-guides the bundle.
-- Polarization and helicity:
+- Neutrality and classical character:
+  - Net charge is zero at all times; far fields are dominated by transverse oscillations set by retardation geometry. In coherent regimes, photons exhibit classical-beam behavior (“evidence for classical photons”) while retaining packet-like coupling to discrete normal modes.
+
+- Axial corridor geometry:
+  - A quasi-cylindrical corridor aligned with propagation axis ê carries the superposed 1/r² shells in a phase structure that self-guides the bundle. The corridor supports a train of phase-aligned planar slices that advance at group speed ~ v.
+
+- Polarization, helicity, and Malus:
   - Linear polarization = fixed orientation of the principal transverse oscillation ellipse relative to ê.
   - Circular/elliptic polarization = constant-phase rotation of that ellipse around ê; helicity is the sign of this axial phase winding.
-- Kinematics:
-  - Group velocity ~ v (≈ 1 in our units); there is no rest frame (apparent rest energy is zero).
-  - Energy–frequency correspondence: for a coherent, periodic source of angular frequency ω, the apparent energy transported by the bundle scales as E_app ∝ ω over resolved intervals, set by the source’s discrete normal modes.
+  - Malus’s law emerges geometrically: an analyzer projects the corridor’s transverse pattern onto its axis, giving transmitted intensity ∝ cos²θ from corridor–analyzer overlap, without invoking right-hand-rule magnetism.
+
+- Kinematics and path:
+  - Group velocity ≈ v (1 in our units); no rest frame (apparent rest energy is zero).
+  - Energy–frequency correspondence: for a periodic source of angular frequency ω, the apparent energy flux scales E_app ∝ ω over resolved intervals.
+  - “Absolute distance and path” correspond to the geometric length of the axial corridor threaded by the train across simultaneity slices Σ_t.
+
+- Environmental coupling (spacetime æther and media):
+  - Refraction, dispersion, and attenuation arise from re-coupling/decoupling between the corridor and coherent ambient assemblies (including spacetime æther assemblies), changing phase velocity or depleting the train.
+
 - Interaction rules (emergent):
   - Coupling is strongest to assemblies with compatible axial corridors (polar regions of binaries/cores).
-  - Absorption = re-capture of the bundle’s phase-locked structure by an internal binary, increasing its mode energy or reconfiguring personality architrinos.
-  - Emission = release of a phase-locked corridor driven by an accelerating neutral or charged subassembly.
+  - Absorption = re-capture of the phase-locked corridor by an internal binary, increasing mode energy or reconfiguring personality architrinos.
+  - Emission = corridor release driven by accelerated neutral or charged subassemblies; bursts form short trains, continuous drives form long trains.
 
-Plain language: A photon is a tight, neutral beam made of many delayed radial pushes that line up down a tube; its “polarization” is just the way that tube wiggles sideways as it moves, and it gets made or eaten when that tube locks onto (or peels off) internal rotating pairs.
+Plain language: A photon is a neutral, phase-locked “train” of planar pushes guided down a narrow tube; polarizers simply project that tube’s sideways wiggle (giving cos²θ), and making or absorbing a photon is the tube locking onto or peeling off an internal rotating pair.
 
 ---
 
-## 2) Neutrinos: Highly Shielded Noether-Core Excitations
+## 2) Neutrinos: Strongly Shielded, Net-Neutral Noether-Core Excitations
 
-Definition (geometric): A neutrino is a Noether Core in a strongly shielded, net-neutral configuration, carrying a small residual, time-averaged external field. Its interactions are weak because superposition inside the core cancels nearly all external projection; only subtle axial mismatches and phase drifts couple to outside structures.
+Definition (geometric): A neutrino is a Noether Core in a net-neutral configuration (no personality charge), with an exterior field that is a tiny, time-averaged residue. Weak interaction strength follows from superposition inside the core that cancels nearly all external projection; only subtle axial mismatches and phase drifts couple to outside structures.
 
-- Structure:
-  - Triply nested binaries with no net personality charge (q_net = 0). Rapid internal motion produces near-complete far-field cancellation (shielding).
+- Core structure and shielding:
+  - Triply nested binaries with q_net = 0 (no bound personality architrinos). Rapid, orthogonal internal motion cancels far fields (energy shielding), leaving only a faint axial residue—consistent with early-universe neutrino decoupling and vanishing charge.
+
 - Propagation:
-  - Travels essentially along straight lines at speeds close to v, with small deflections only from coherent axial couplings.
-- Flavor and oscillation:
-  - “Flavor” corresponds to which internal binary (of the three) predominantly hosts the residual phase imbalance. Slow exchange of this imbalance among the three binaries yields flavor oscillations over distance, without invoking a fundamental mass term; the beat pattern follows from internal phase dynamics and retardation geometry.
-- Chirality (handedness constraint):
-  - The residual coupling to external axial corridors is chiral: geometric selection rules favor one axial phase winding over the other in emission/capture from typical sources, producing the observed handedness bias in interactions.
-- Interactions:
-  - Dominated by axial corridor overlap with other shielded/neutral assemblies and by transient, localized re-couplings near polar regions of cores. Cross sections are tiny because the exterior field is a faint residue.
+  - Trajectories are almost straight at speeds close to v; small deflections occur only through coherent axial corridor couplings to nearby assemblies. Apparent inertia is dictated by the minuscule residual field (“apparent mass” from shielding).
 
-Plain language: A neutrino is a very quiet, neutral core whose outside “whisper” changes which inner loop is slightly ahead; that whisper swaps loops slowly as it flies, so its type oscillates, and it only bumps into things that line up just right along an axis.
+- Flavor and oscillation (internal phase swapping):
+  - “Flavor” labels which internal binary predominantly hosts the residual phase imbalance. Slow exchange of this imbalance among the three binaries yields flavor oscillations over distance without invoking a fundamental rest mass; the beat pattern arises from internal phase dynamics and retardation geometry.
+
+- Chirality (handedness bias):
+  - Emission/capture selection rules are chiral: axial phase winding favored in typical sources matches observed handedness of weak processes (alignment with W/Z-like corridor re-couplings).
+
+- Weak interactions as corridor re-coupling:
+  - Charged-current processes correspond to brief, localized corridor connections that reassign personality architrinos between assemblies (W-like), while neutral-current scattering corresponds to energy/momentum exchange with zero net charge transfer (Z-like). Cross sections are tiny because the neutrino’s exterior field is only a faint residue.
+
+Plain language: A neutrino is a very quiet, neutral core with almost all of its energy hidden; a tiny axial “whisper” shifts among three inner loops as it flies, making its type oscillate, and it interacts only when that whisper lines up just right with another assembly’s axis.
 
 ---
