--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -1,6 +1,6 @@
 # Photons and Neutrinos: Neutral, Geometric Channels
 
-Note: This document follows the Mathematical Style Guide (Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/Mathematical Style Guide.md). We work in units with field speed v = 1 unless stated otherwise.
+We work in units with field speed v = 1 unless stated otherwise.
 
 ---
 
