--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -1,8 +1,6 @@
 # W and Z Bosons as Transient Electroweak Meta-Assemblies
 
-Note: This document follows the Mathematical Style Guide (Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/Mathematical Style Guide.md). We work in units with field speed v = 1 unless stated otherwise. ε = |e|/6 is the unit charge magnitude.
-
----
+We work in units with field speed v = 1 unless stated otherwise. ε = |e|/6 is the unit charge magnitude.
 
 ## 1) Concept: Localized Recoupling Bundles
 
