--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -1,8 +1,10 @@
 # Orbiting Binary Assembly
 
-An orbiting binary is the simplest emergent assembly, consisting of two Architrinos of opposite charge—an Electrino and a Positrino. This system demonstrates the fundamental principles of interaction, including the consequences of delayed potential and the role of the velocity symmetry point. Let's consider the ideal case of a symmetric orbit in a universe with no other Architrinos.
+An orbiting binary is the simplest emergent assembly, consisting of two Architrinos of opposite charge—an Electrino and a Positrino. With charges $-\epsilon$ and $+\epsilon$, the assembly is electrically neutral overall. This system demonstrates the fundamental principles of interaction, including the consequences of delayed potential and the role of the velocity symmetry point. 
 
 ### 1. System Definition and Equations of Motion
+
+Let's consider the ideal case of a symmetric orbit in a universe with no other Architrinos.
 
 Let the Electrino be particle 1 and the Positrino be particle 2.
 -   **Positions:** $\mathbf{s}_1(t)$ and $\mathbf{s}_2(t)$
@@ -25,7 +27,7 @@ In this system, a stable, circular orbit is impossible. Because the attractive f
 -   The tangential component of the delayed force sustains the orbital motion.
 -   The radial component continuously pulls the particles closer together.
 
-With perfectly symmetric initial conditions (e.g., starting at rest), the paths of the Electrino and Positrino are distinct but perfect mirror images of each other. As they spiral inward, their speeds continuously increase. Consequently, according to the velocity-modulated emission rule, the effective charge $q_{eff}$ of their emissions continuously decreases.
+With perfectly symmetric initial conditions (e.g., starting at rest), the paths of the Electrino and Positrino are distinct but perfect mirror images of each other. As they spiral inward, their speeds continuously increase. Consequently, according to the velocity-modulated emission rule, the effective charge $q_{eff}$ (per-wavefront amplitude) continuously decreases as speed rises. This does not alter the emission cadence: Architrinos emit at a constant rate; only the per-wavefront amplitude is modulated.
 
 ### 3. Evolution Through Velocity Regimes
 
@@ -58,6 +60,7 @@ At this limit, the trajectory stabilizes, and the system settles into a **stable
 The stabilization of the orbiting binary gives rise to fundamental, emergent properties for the universe:
 -   **An Emergent Unit of Distance:** The radius of this stable orbit is a constant, determined by the fundamental parameters of the model (field speed $v$, charge $\epsilon$). It serves as the smallest possible orbital radius and thus becomes a natural, emergent unit of distance.
 -   **An Imposed Speed Limit:** While individual Architrinos have no inherent speed limit, the particles within this stable assembly are constrained to a specific, constant orbital speed. This creates a practical speed limit for particles bound within such structures.
+-   **A Zero-Potential Axis:** In an ideal, symmetric orbit, the positive and negative potentials emitted by the two particles perfectly cancel along the axis of rotation. This creates a line of zero net potential. In a sense, this axis acts as a "wormhole" through which another Architrino could pass without being accelerated by the binary, provided its path is perfectly aligned with the axis.
 
 ---
 
