--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -19,13 +19,13 @@ Plain language: W and Z are fleeting “thickened tubes” of push that briefly 
 
 - W± (charged transfer):
   - Function: transports net charge ±6ε between assemblies by reconfiguring which cores/personality architrinos carry those ε-units.
-  - Charge: q_W = ±6ε (matches ±e when measured in electron units).
+  - Charge: $q_W = \pm 6\epsilon$ (matches $\pm e$ when measured in electron units).
   - Spin: effectively spin-1 from the axial corridor structure and its transverse phase.
   - Interpretation: a localized transfer operation that updates the charge bookkeeping of the coupled assemblies while conserving the global ε-inventory.
 
 - Z⁰ (neutral transfer):
   - Function: transports energy, momentum, and angular momentum with zero net charge.
-  - Charge: q_Z = 0.
+  - Charge: $q_Z = 0$.
   - Spin: effectively spin-1 for the same axial reasons.
   - Interpretation: a neutral corridor enabling re-phasing and mode exchange without charge movement.
 
