--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -24,14 +24,16 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 ## 2) Velocity-modulated emission and reception: a built-in energy regulator
 
 - What we assume:
-  - Emission cadence is constant; the effective per-wavefront amplitude is q_eff(t0)=q/(1+|v_source(t0)|).
-  - Receiver response is likewise modulated by 1/(1+|v_receiver(t)|).
+  - Emission cadence is constant; the effective per-wavefront amplitude is $q_{\mathrm{eff}}(t_0)=\dfrac{q}{1+|v_{\text{source}}(t_0)|}$.
+  - Receiver response is likewise modulated by $1/(1+|v_{\text{receiver}}(t)|)$.
   - Canonical per-hit law:
-    a_{o′←o} ∝ σ_{q_o q_{o′}} |q_o q_{o′}|/(r² (1+|v_o|)(1+|v_{o′}|)) r̂.
+    $$
+    a_{o′\leftarrow o} \propto \sigma_{q_o q_{o′}}\,\frac{|q_o q_{o′}|}{r^2\,\big(1+|v_o|\big)\,\big(1+|v_{o′}|\big)}\,\hat{\mathbf{r}}.
+    $$
 
 - Why it matters:
   - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is the per-wavefront amplitude (q_eff) and the receiver’s response factor. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points.
-  - Energetics become tractable: with η-mollification (δ→δ_η), you can define Φ_η and verify ΔE_k=−ΔU on resolved intervals while still taking η→0 for sharp impulses.
+  - Energetics become tractable: with η-mollification ($\delta\to\delta_\eta$), you can define $\Phi_\eta$ and verify $\Delta E_k = -\,\Delta U$ on resolved intervals while still taking $\eta\to 0$ for sharp impulses.
 
 ---
 
@@ -51,7 +53,7 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 
 - What we assume:
   - All fields superpose linearly at the level of distributions (shells add).
-  - We use a narrow Gaussian shell δ_ε when continuous-time derivatives are needed.
+  - We use a narrow Gaussian shell $\delta_\varepsilon$ when continuous-time derivatives are needed.
 
 - Why it matters:
   - Locality: 1/r² weighting ensures near sources dominate; far sources cancel via multipole suppression.
@@ -109,11 +111,11 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 - Observable: a “quiet line” (near-zero net potential) threading the binary.
 
 2) Scale selection for d0 and t0
-- With δ→δ_ε, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines d0 and the maximum orbital frequency 2π/t0.
+- With $\delta\to\delta_\varepsilon$, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines d0 and the maximum orbital frequency $2\pi/t_0$.
 - Prediction: the same d0 appears across binaries with the same ε and v, independent of initial conditions after sufficient relaxation.
 
 3) Energy consistency across the |v|=1 transition
-- Use Φ_ε to evaluate U and verify ΔE_k=−ΔU across events that cross the symmetry point; in the ε→0 limit, impulses integrate to the same work.
+- Use $\Phi_\varepsilon$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\varepsilon\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
 - For each receiver time t: (i) root-find retarded times t0 for all sources (and self), (ii) discard non-physical roots (H(0)=0, handle r=0 by symmetry), (iii) sum a_{o′←o}(t;t0) with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use ε-thickening for smooth integration when needed.
