--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -50,6 +50,34 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
 
     In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges, both objects’ speeds, and a $1/r^2$ falloff, then add up all such pushes.
 
+### Receiver velocity: radial vs orthogonal components (instantaneous effect)
+
+At a given hit $(t;t')$, decompose the receiver velocity into components parallel and orthogonal to the line of action $\hat{\mathbf{r}}$:
+$$
+\mathbf{v}_{o'}(t) \;=\; v_r\,\hat{\mathbf{r}} \;+\; \mathbf{v}_\perp,
+\qquad v_r \equiv \mathbf{v}_{o'}(t)\cdot \hat{\mathbf{r}},
+\qquad \mathbf{v}_\perp \equiv \mathbf{v}_{o'}(t) - v_r \hat{\mathbf{r}}.
+$$
+Because $\mathbf{a}_{o'\leftarrow o}(t;t') \parallel \hat{\mathbf{r}}$, its instantaneous effect satisfies
+$$
+\frac{d}{dt}\mathbf{v}_\perp \;=\; \mathbf{0}\quad\text{from this hit}, 
+\qquad
+\frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t')\cdot \hat{\mathbf{r}}
+\;=\;
+\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2\,\big(1+|\mathbf{v}_o(t')|\big)\big(1+|\mathbf{v}_{o'}(t)|\big)}.
+$$
+Thus the per-hit work rate is $\mathbf{a}\cdot\mathbf{v} = (\mathbf{a}\cdot\hat{\mathbf{r}})\,v_r$; there is no instantaneous work on the orthogonal component.
+
+Radial motion and the $\large 1/r^2$ factor (local trend):
+- Inward motion ($\large v_r<0$, receiver moving toward the retarded source point) decreases $r$ between close successive hits, tending to increase subsequent per-hit strengths via $\large 1/r^2$ (all else equal).
+- Outward motion ($\large v_r>0$) increases $r$, tending to decrease subsequent per-hit strengths.
+
+Retardation shifts both the retarded root $t'$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
+
+Modeling note: The canonical modulation uses the total speed $|\mathbf{v}_{o'}(t)|$ in the factor $1/\big(1+|\mathbf{v}_{o'}(t)|\big)$. Some applications may consider an alternative receiver modulation depending only on $|v_r|$ to isolate motion along the line of action; we retain the canonical total-speed modulation here for consistency.
+
+Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
+
 ### **Well-posedness and Regularization**
 The surface–delta shells yield impulsive forces at isolated hit times. One may treat the dynamics as a measure-driven ODE in $t$ (with velocity of bounded variation), or regularize by replacing the surface delta with a narrow shell of thickness $\varepsilon$,
 $$
