--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -21,8 +21,8 @@ Definition (geometric): A photon is a coherent, charge-neutral, propagating bund
 
 - Kinematics and path:
   - Group velocity ≈ v (1 in our units); no rest frame (apparent rest energy is zero).
-  - Energy–frequency correspondence: for a periodic source of angular frequency ω, the apparent energy flux scales E_app ∝ ω over resolved intervals.
-  - “Absolute distance and path” correspond to the geometric length of the axial corridor threaded by the train across simultaneity slices Σ_t.
+  - Energy–frequency correspondence: for a periodic source of angular frequency ω, the apparent energy flux scales $E_{\text{app}} \propto \omega$ over resolved intervals.
+  - “Absolute distance and path” correspond to the geometric length of the axial corridor threaded by the train across simultaneity slices $\Sigma_t$.
 
 - Environmental coupling (spacetime æther and media):
   - Refraction, dispersion, and attenuation arise from re-coupling/decoupling between the corridor and coherent ambient assemblies (including spacetime æther assemblies), changing phase velocity or depleting the train.
@@ -41,7 +41,7 @@ Plain language: A photon is a neutral, phase-locked “train” of planar pushes
 Definition (geometric): A neutrino is a Noether Core in a net-neutral configuration (no personality charge), with an exterior field that is a tiny, time-averaged residue. Weak interaction strength follows from superposition inside the core that cancels nearly all external projection; only subtle axial mismatches and phase drifts couple to outside structures.
 
 - Core structure and shielding:
-  - Triply nested binaries with q_net = 0 (no bound personality architrinos). Rapid, orthogonal internal motion cancels far fields (energy shielding), leaving only a faint axial residue—consistent with early-universe neutrino decoupling and vanishing charge.
+  - Triply nested binaries with $q_{\text{net}} = 0$ (no bound personality architrinos). Rapid, orthogonal internal motion cancels far fields (energy shielding), leaving only a faint axial residue—consistent with early-universe neutrino decoupling and vanishing charge.
 
 - Propagation:
   - Trajectories are almost straight at speeds close to v; small deflections occur only through coherent axial corridor couplings to nearby assemblies. Apparent inertia is dictated by the minuscule residual field (“apparent mass” from shielding).
