--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -1,20 +1,26 @@
 # Mathematical Style Guide (Canonical Dialect)
 
-Purpose: Define a single, canonical mathematical and geometrical dialect for the Geometrical Model of Nature. All technical documents should adhere to this guide.
+Purpose: Define a single, canonical mathematical and geometrical dialect for the Geometrical Model of Nature. All technical documents should adhere to this guide. Equations are presented in display math for clarity where appropriate.
 
 ---
 
 ## 1) Background spaces and sets
 
 - Timespace:
-  - M = ℝ × ℝ³ with coordinates (t, x, y, z).
-  - Σ_t = {t} × ℝ³ are simultaneity slices (Euclidean 3-space snapshots).
+  $$
+  \mathcal{M} = \mathbb{R}\times \mathbb{R}^3
+  $$
+  with coordinates $(t, x, y, z)$.
+  $$
+  \Sigma_t = \{t\}\times \mathbb{R}^3
+  $$
+  are simultaneity slices (Euclidean 3-space snapshots).
 - Vectors and norms:
   - Spatial vectors are bold: s, v, a.
   - Unit vectors carry hats: r̂.
   - Norms use double bars: ||·||.
 - Indices:
-  - Components indexed by i, j ∈ {1,2,3} with δ_ij.
+  - Components indexed by $\large i, j \in \{1,2,3\}$ with $\large \delta_{ij}$.
 
 Plain language: One global clock t and ordinary 3D space; we write vectors in bold, unit directions with hats, and lengths with double bars.
 
@@ -22,8 +28,17 @@ Plain language: One global clock t and ordinary 3D space; we write vectors in bo
 
 ## 2) Kinematics (Newton–Cartan/Galilean background)
 
-- Absolute time t is universal and oriented; durations are Δt = |t₂ − t₁|.
-- Space is Euclidean with metric h_ij = δ_ij on each slice Σ_t.
+- Absolute time $t$ is universal and oriented; durations are
+
+  $$
+  \Delta t = |\,t_2 - t_1\,|.
+  $$
+
+- Space is Euclidean with metric
+
+  $$
+  h_{ij} = \delta_{ij}\quad\text{on each slice }\Sigma_t.
+  $$
 - There is no 4D non-degenerate metric; we do not mix time and space into a single line element.
 - Worldlines:
   - x: I ⊂ ℝ → ℝ³, t ↦ x(t), absolutely continuous; v = dx/dt, a = dv/dt.
@@ -36,9 +51,13 @@ Plain language: Objects move as dots in 3D through successive instants; speeds a
 
 - Field speed is v; by default we non-dimensionalize to v = 1.
 - Retarded-time condition (RT):
-  - τ = t − t₀, r = ||s_o′(t) − s_j(t₀)||, and r = v τ.
+  $$
+  \tau = t - t_0,\quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\|,\quad r = v\,\tau
+  $$
 - Causal set:
-  - 𝒞_j(t) = { t₀ ≤ t | ||s_o′(t) − s_j(t₀)|| = v (t − t₀) }.
+  $$
+  \mathcal{C}_j(t) = \{\, t_0 \le t \mid \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\}
+  $$
 - Conventions:
   - H(0) = 0 (no instantaneous self-kick).
   - Exact center hits r = 0 with τ > 0 yield no directional acceleration (symmetry; measure zero).
@@ -50,12 +69,20 @@ Plain language: A push now only happens if a past sphere has had exactly enough 
 ## 4) Distributions and regularization (spherical shells)
 
 - Point emission at (t₀, s₀):
-  - source = q δ(t − t₀) δ³(s − s₀).
+  $$
+  \text{source} = q\,\delta(t - t_0)\,\delta^{(3)}(\mathbf{s} - \mathbf{s}_0)
+  $$
 - Expanding shell at speed v:
-  - ρ(t, s) = (q/(4π r²)) δ(r − v τ) H(τ), r = ||s − s₀||, τ = t − t₀.
-  - Equivalently with surface delta δ_S: ρ = (q/(4π r²)) δ_S_{vτ}(s − s₀) H(τ).
+  $$
+  \rho(t,\mathbf{s}) = \frac{q}{4\pi r^2}\,\delta(r - v\,\tau)\,H(\tau),\quad r=\|\mathbf{s}-\mathbf{s}_0\|,\ \tau=t-t_0
+  $$
+  $$
+  \rho = \frac{q}{4\pi r^2}\,\delta_{S_{v\tau}}(\mathbf{s}-\mathbf{s}_0)\,H(\tau)
+  $$
 - Regularization:
-  - δ(r − v τ) → δ_η(r − v τ) = (1/(√(2π) η)) exp(−(r − v τ)²/(2 η²)).
+  $$
+  \delta(r - v\,\tau)\ \to\ \delta_\eta(r - v\,\tau) \;=\; \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(\!-\frac{(r - v\,\tau)^2}{2\,\eta^2}\Big)
+  $$
   - Use η > 0 when differentiability is required; take η → 0 limits in the weak/integrated sense.
 
 Plain language: Each emission is a razor-thin spherical shell; when needed, we thicken it slightly so calculus works smoothly.
@@ -65,15 +92,23 @@ Plain language: Each emission is a razor-thin spherical shell; when needed, we t
 ## 5) Master Equation of Motion (EOM; purely radial)
 
 Given a receiver o′ at time t and a source j at retarded time t₀ ∈ 𝒞_j(t), let
-- r = ||s_o′(t) − s_j(t₀)||,
-- r̂ = (s_o′(t) − s_j(t₀)) / r,
-- σ_{q_j q_{o′}} = sign(q_j q_{o′}) ∈ {+1, −1}.
+$$
+r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\|,\quad
+\hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)}{r},\quad
+\sigma_{q_j q_{o'}} = \mathrm{sign}(q_j q_{o'}) \in \{+1,-1\}
+$$
 
 Canonical per-hit acceleration:
-a_{o′←j}(t; t₀) = κ σ_{q_j q_{o′}} |q_j q_{o′}| / ( r² (1 + |v_j(t₀)|)(1 + |v_{o′}(t)|) ) r̂.
+$$
+a_{o′\leftarrow j}(t; t_0)
+= \kappa\,\sigma_{q_j q_{o′}}\,
+\frac{|q_j q_{o′}|}{r^2\,(1 + |v_j(t_0)|)\,(1 + |v_{o′}(t)|)}\,\hat{\mathbf{r}}.
+$$
 
 Total acceleration:
-a_o′(t) = Σ_j Σ_{t₀ ∈ 𝒞_j(t)} a_{o′←j}(t; t₀).
+$$
+\mathbf{a}_{o′}(t) = \sum_{j}\ \sum_{t_0 \in \mathcal{C}_j(t)} a_{o′\leftarrow j}(t; t_0).
+$$
 
 Notes:
 - Emission cadence is constant; only per-wavefront amplitude and receiver response are speed-modulated.
@@ -81,16 +116,37 @@ Notes:
 
 Plain language: For each past emission that can reach you now, push along the line back to where it came from, weaken the push by both sides’ speeds and by 1/r², then add all pushes.
 
+Receiver velocity decomposition (instantaneous):
+- Decompose the receiver velocity relative to r̂:
+  $$
+  \mathbf{v} = v_r\,\hat{\mathbf{r}} + \mathbf{v}_\perp,\qquad v_r = \mathbf{v}\cdot \hat{\mathbf{r}}
+  $$
+- Because a_{o′←j} ∥ r̂, a single hit updates only the radial component:
+  $$
+  \frac{d}{dt}\mathbf{v}_\perp = 0,\qquad \frac{d}{dt}v_r = a_{o′\leftarrow j}\cdot \hat{\mathbf{r}}
+  $$
+- Local trend: inward motion ($\large v_r<0$) tends to strengthen subsequent per-hit contributions via the $\large 1/r^2$ factor; outward ($\large v_r>0$) tends to weaken them, all else equal.
+
+Plain language: a hit changes only the along-the-line piece of your velocity right then; sideways motion is unchanged at that instant.
+
 ---
 
 ## 6) Energetics
 
 - Potential (mollified):
-  - Φ_η is defined using δ_η shells; U = q′ Φ_η at a point.
+  - Φ_η is defined using δ_η shells; at a point:
+    $$
+    U = q'\,\Phi_\eta
+    $$
 - Force relation:
-  - F = −∇U holds pointwise for Φ_η; as η → 0, interpret in the weak sense over resolved intervals.
+  - Holds pointwise for Φ_η; as η → 0, interpret in the weak sense over resolved intervals:
+    $$
+    \mathbf{F} = -\nabla U
+    $$
 - Work–energy:
-  - ΔE_k = ∫ F · ds = −ΔU.
+  $$
+  \Delta E_k \;=\; \int \mathbf{F}\cdot d\mathbf{s} \;=\; -\,\Delta U
+  $$
 
 Plain language: With slightly thick shells, the usual “force is minus gradient of potential” works; in the razor-thin limit it works after integrating over small time windows.
 
@@ -102,7 +158,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - ε = |e|/6 is the unit charge magnitude; Electrino q = −ε, Positrino q = +ε.
 - κ > 0 universal coupling.
 - η > 0 mollifier width (regularization parameter).
-- q_eff(t₀) = q/(1 + |v_source(t₀)|) (per-wavefront amplitude); receiver modulation 1/(1 + |v_receiver(t)|).
+- $\large q_{\mathrm{eff}}(t_0) = \dfrac{q}{1 + \lvert v_{\text{source}}(t_0)\rvert}$ (per-wavefront amplitude); receiver modulation $\large \dfrac{1}{1 + \lvert v_{\text{receiver}}(t)\rvert}$.
 - r, r̂ as above; H is the Heaviside step function with H(0) = 0.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims per-wavefront amplitude and response, not cadence.
