--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -16,9 +16,9 @@ Purpose: Define a single, canonical mathematical and geometrical dialect for the
   $$
   are simultaneity slices (Euclidean 3-space snapshots).
 - Vectors and norms:
-  - Spatial vectors are bold: s, v, a.
-  - Unit vectors carry hats: r̂.
-  - Norms use double bars: ||·||.
+  - Spatial vectors are bold: $\mathbf{s}, \mathbf{v}, \mathbf{a}$.
+  - Unit vectors carry hats: $\hat{\mathbf{r}}$.
+  - Norms use double bars: $\|\cdot\|$.
 - Indices:
   - Components indexed by $\large i, j \in \{1,2,3\}$ with $\large \delta_{ij}$.
 
@@ -41,7 +41,7 @@ Plain language: One global clock t and ordinary 3D space; we write vectors in bo
   $$
 - There is no 4D non-degenerate metric; we do not mix time and space into a single line element.
 - Worldlines:
-  - x: I ⊂ ℝ → ℝ³, t ↦ x(t), absolutely continuous; v = dx/dt, a = dv/dt.
+  - $\mathbf{x}: I \subset \mathbb{R} \to \mathbb{R}^3,\ t \mapsto \mathbf{x}(t)$, absolutely continuous; $\mathbf{v} = d\mathbf{x}/dt$, $\mathbf{a} = d\mathbf{v}/dt$.
 
 Plain language: Objects move as dots in 3D through successive instants; speeds and distances are measured separately from time.
 
@@ -49,7 +49,7 @@ Plain language: Objects move as dots in 3D through successive instants; speeds a
 
 ## 3) Propagation and causal set (retarded-only)
 
-- Field speed is v; by default we non-dimensionalize to v = 1.
+- Field speed is $v$; by default we non-dimensionalize to $v=1$.
 - Retarded-time condition (RT):
   $$
   \tau = t - t_0,\quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\|,\quad r = v\,\tau
@@ -59,8 +59,8 @@ Plain language: Objects move as dots in 3D through successive instants; speeds a
   \mathcal{C}_j(t) = \{\, t_0 \le t \mid \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\}
   $$
 - Conventions:
-  - H(0) = 0 (no instantaneous self-kick).
-  - Exact center hits r = 0 with τ > 0 yield no directional acceleration (symmetry; measure zero).
+  - $H(0)=0$ (no instantaneous self-kick).
+  - Exact center hits $r=0$ with $\tau>0$ yield no directional acceleration (symmetry; measure zero).
 
 Plain language: A push now only happens if a past sphere has had exactly enough time to reach you.
 
@@ -112,16 +112,16 @@ $$
 
 Notes:
 - Emission cadence is constant; only per-wavefront amplitude and receiver response are speed-modulated.
-- No cross products, no right-hand-rule magnetism; every per-hit action is along r̂.
+- No cross products, no right-hand-rule magnetism; every per-hit action is along $\hat{\mathbf{r}}$.
 
 Plain language: For each past emission that can reach you now, push along the line back to where it came from, weaken the push by both sides’ speeds and by 1/r², then add all pushes.
 
 Receiver velocity decomposition (instantaneous):
-- Decompose the receiver velocity relative to r̂:
+- Decompose the receiver velocity relative to $\hat{\mathbf{r}}$:
   $$
   \mathbf{v} = v_r\,\hat{\mathbf{r}} + \mathbf{v}_\perp,\qquad v_r = \mathbf{v}\cdot \hat{\mathbf{r}}
   $$
-- Because a_{o′←j} ∥ r̂, a single hit updates only the radial component:
+- Because $a_{o′\leftarrow j} \parallel \hat{\mathbf{r}}$, a single hit updates only the radial component:
   $$
   \frac{d}{dt}\mathbf{v}_\perp = 0,\qquad \frac{d}{dt}v_r = a_{o′\leftarrow j}\cdot \hat{\mathbf{r}}
   $$
@@ -134,12 +134,12 @@ Plain language: a hit changes only the along-the-line piece of your velocity rig
 ## 6) Energetics
 
 - Potential (mollified):
-  - Φ_η is defined using δ_η shells; at a point:
+  - $\Phi_\eta$ is defined using $\delta_\eta$ shells; at a point:
     $$
     U = q'\,\Phi_\eta
     $$
 - Force relation:
-  - Holds pointwise for Φ_η; as η → 0, interpret in the weak sense over resolved intervals:
+  - Holds pointwise for $\Phi_\eta$; as $\eta \to 0$, interpret in the weak sense over resolved intervals:
     $$
     \mathbf{F} = -\nabla U
     $$
@@ -154,12 +154,12 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 
 ## 7) Units and symbols
 
-- v = 1 by default (dimensionless speed unit).
-- ε = |e|/6 is the unit charge magnitude; Electrino q = −ε, Positrino q = +ε.
-- κ > 0 universal coupling.
-- η > 0 mollifier width (regularization parameter).
+- $v=1$ by default (dimensionless speed unit).
+- $\epsilon = |e|/6$ is the unit charge magnitude; Electrino $q=-\epsilon$, Positrino $q=+\epsilon$.
+- $\kappa>0$ universal coupling.
+- $\eta>0$ mollifier width (regularization parameter).
 - $\large q_{\mathrm{eff}}(t_0) = \dfrac{q}{1 + \lvert v_{\text{source}}(t_0)\rvert}$ (per-wavefront amplitude); receiver modulation $\large \dfrac{1}{1 + \lvert v_{\text{receiver}}(t)\rvert}$.
-- r, r̂ as above; H is the Heaviside step function with H(0) = 0.
+- $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims per-wavefront amplitude and response, not cadence.
 
@@ -176,6 +176,6 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 ## 9) Editorial micro-style
 
 - After formal definitions, add a brief “Plain language” sentence.
-- Use consistent symbol set: 𝒞_j(t), r, r̂, v, ε, κ.
+- Use consistent symbol set: $\mathcal{C}_j(t)$, $r$, $\hat{\mathbf{r}}$, $v$, $\epsilon$, $\kappa$.
 - Equation tags (optional): (RT) retarded-time, (EOM) equation of motion, (REG) regularization, (ENER) energetics.
 - Phrase velocity effects as “per-wavefront amplitude and receiver response modulation; emission cadence is constant.”
